# bots-manager

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  Readme-EnvironmentSetup.md  Readme.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
scripts/: cleanup-docker.sh  init-db.sh  reset-dev-environment.sh  run_integration_tests.sh  run_tests.sh  run_unit_tests.sh  setup-env.sh  update-env.sh  validate-env.sh
src/backend/: config.py  database.py  deps.py  exceptions.py  logger.py  main.py
src/backend/models/: __init__.py  bot.py
src/backend/routers/: bot.py  debug.py  health.py
src/backend/schemas/: bot.py
src/backend/services/: bot_service.py  bybit_client.py  bybit_service.py
src/frontend/: main.py
src/utils/: logging_config.py
tests/: conftest.py
tests/test_api/: test_bot_endpoints.py  test_list_trading_bots.py
tests/test_models/: test_bot.py
